Added Our Model (GNN)

--- a/modelling_pyhealth.ipynb
+++ b/modelling_pyhealth.ipynb
@@ -26,6 +26,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install torch-geometric"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -151,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating samples for drug_recommendation_mimic3_fn: 100%|██████████| 1560/1560 [00:00<00:00, 13335.79it/s]\n"
+      "Generating samples for drug_recommendation_mimic3_fn: 100%|██████████| 1560/1560 [00:00<00:00, 9511.43it/s]\n"
      ]
     }
    ],
@@ -253,6 +262,26 @@
    ],
    "source": [
     "len(train_ds), len(val_ds), len(test_ds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Our Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyhealth.models import GNN\n",
+    "\n",
+    "model = GNN(\n",
+    "    dataset=mimic3sample\n",
+    ")"
    ]
   },
   {
