Improving readness of notebook

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Preprocessing"
+    "## Data Preprocessing (with the extraction of concepts from NOTEEVENTS)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Estrazione concetti da NOTEEVENTS"
+    "### Libraries"
    ]
   },
   {
@@ -57,8 +57,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sampling a subset of patients"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,13 +95,6 @@
     "prescriptions = pd.read_csv(\n",
     "    \"data/PRESCRIPTIONS.csv\"\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Estrazione note d'interesse"
    ]
   },
   {
@@ -1378,7 +1378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Estrazione delle sezioni e pulizia del testo delle note (OPZIONALE)"
+    "### Extraction of sections (OPTIONAL: does not improve the accuracy)"
    ]
   },
   {
@@ -1580,7 +1580,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NER + EL con MedCAT"
+    "### NER + EL with MedCAT"
    ]
   },
   {
@@ -1697,7 +1697,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Salvataggio NOTEEVENTS_ICD"
+    "### Saving the concepts obtained into NOTEEVENTS_ICD"
    ]
   },
   {
