Fix Security BUG

--- a/LLM_testing.ipynb
+++ b/LLM_testing.ipynb
@@ -17,7 +17,7 @@
     "import shutil\n",
     "from autogen import OpenAIWrapper\n",
     "\n",
-    "OPENAI_API_KEY = \"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\"\n",
+    "OPENAI_API_KEY = \"\"\n",
     "shutil.rmtree(\".cache/\", ignore_errors=True)"
    ]
   },
